# cosmos

./: .coveragerc  .gitignore  Admin.Dockerfile  CODEOWNERS  Dockerfile  README.md  alembic.ini  openapi.yaml  pyproject.toml  style.sh
.github/workflows/: build.yaml  ci.yaml  erd.yaml  test.yaml  update_erd.yaml
admin/: README.md  app.py  config.py  wsgi.py
admin/activity_utils/: enums.py  schemas.py  utils.py
admin/db/: __init__.py  session.py
admin/helpers/: custom_filters.py  custom_formatters.py
admin/hubble/db/: __init__.py  models.py  session.py
admin/templates/: eh_create.html  eh_delete_retailer_action.html  eh_edit.html  eh_end_campaign_action.html  eh_list.html  eh_master.html
admin/templates/admin/: index.html
admin/views/: __init__.py  auth.py  healthz.py  main.py  model_views.py  utils.py
admin/views/accounts/: __init__.py  main.py  validators.py
admin/views/activity/: __init__.py  account_activity_rtbf.py  enums.py  main.py
admin/views/campaign_reward/: __init__.py  campaign.py  custom_actions.py  forms.py  reward.py  validators.py
admin/views/retailer/: __init__.py  custom_actions.py  forms.py  main.py  validators.py
admin/views/tasks/: __init__.py  main.py
admin/views/transactions/: __init__.py  main.py
alembic/: env.py  task_stuff.py  transaction_check_constraint.txt
alembic/versions/: 07ae52708a7c_init.py  445163cbf0f3_add_purchase_prompt_email_type.py  54456cff0eaf_transaction_earn_nullables.py  7006d0394a45_init.py  962cc8859572_init.py  a17cdfcce810_email_tables_refactor.py  ce2b5ff75fa5_init.py  cf6966981657_add_reward_issuance_task_type.py  d05495d87478_reward_config_slug.py  d5370f835f74_init.py  df0feab6b6fc_init.py
cosmos/accounts/: config.py  enums.py  send_email_params_gen.py  utils.py
cosmos/accounts/activity/: enums.py  schemas.py
cosmos/accounts/api/: __init__.py  app.py  crud.py  deps.py  operations.py  service.py
cosmos/accounts/api/endpoints/: account.py  enrolment.py
cosmos/accounts/api/enums/: http_error.py
cosmos/accounts/api/schemas/: __init__.py  account_holder.py  utils.py
cosmos/accounts/schemas/: __init__.py  account_holder.py  utils.py
cosmos/accounts/tasks/: account_holder.py
cosmos/campaigns/: asgi.py  config.py  enums.py
cosmos/campaigns/activity/: enums.py  schemas.py
cosmos/campaigns/api/: app.py  crud.py  endpoints.py  schemas.py  service.py
cosmos/campaigns/api/endpoints/: __init__.py  status.py
cosmos/core/: cli.py  config.py  error_codes.py  exception_handlers.py  key_vault.py  prometheus.py  reporting.py  utils.py
cosmos/core/activity/: enums.py  schemas.py  tasks.py  utils.py
cosmos/core/api/: crud.py  deps.py  exception_handlers.py  exceptions.py  healthz.py  http_error.py  service.py  service_result.py  tasks.py
cosmos/core/scheduled_tasks/: balances.py  scheduled_email.py  scheduler.py  task_cleanup.py
cosmos/core/tasks/: __init__.py  auth.py  error_handlers.py  mailjet.py
cosmos/db/: base.py  base_class.py  check_constraints.py  config.py  data.py  models.py  session.py
cosmos/db/models/: accounts.py  campaigns.py  retailers.py  rewards.py  transactions.py
cosmos/public/: config.py
cosmos/public/activity/: enums.py  schemas.py
cosmos/public/api/: app.py  crud.py  endpoints.py  schemas.py  service.py
cosmos/public_api/api/: app.py  crud.py  endpoints.py  metrics.py  schemas.py  service.py
cosmos/retailers/: crud.py  enums.py  schemas.py
cosmos/rewards/: config.py  crud.py  enums.py  schemas.py
cosmos/rewards/activity/: enums.py  schemas.py
cosmos/rewards/fetch_reward/: __init__.py  base.py  jigsaw.py  pre_loaded.py
cosmos/rewards/imports/: file_agent.py
cosmos/rewards/scheduled_tasks/: pending_rewards.py
cosmos/rewards/tasks/: issuance.py
cosmos/transactions/: config.py  exceptions.py
cosmos/transactions/activity/: enums.py  schemas.py  utils.py
cosmos/transactions/api/: app.py  crud.py  deps.py  endpoints.py  schemas.py  service.py
cosmos/transactions/api/endpoints/: transaction.py
cosmos/transactions/api/enums/: http_error.py
data_gen/: cli.py  crud.py  enums.py  fixtures.py  generator.py  utils.py
scripts/erd/: README.md  generate_upload_erd.py
tests/: __init__.py  conftest.py
tests/accounts/: __init__.py  conftest.py  test_activity_type.py
tests/accounts/api/: __init__.py  test_accounts.py  test_enrolment.py  test_get_by_credentials.py
tests/accounts/fixtures/: errors.py
tests/accounts/functional/: test_scheduled_tasks.py  test_tasks.py
tests/admin/: conftest.py
tests/admin/activity/: test_activity_type.py  test_enums.py
tests/admin/views/accounts/: test_account_holder_admin.py
tests/admin/views/campaign_reward/: test_campaign_admin.py  test_reward_admin.py  test_reward_config_admin.py
tests/admin/views/retailer/: test_retailer_admin.py  test_validators.py
tests/campaigns/: test_activity_type.py
tests/campaigns/api/: __init__.py  conftest.py  test_migration.py  test_service_layer.py  test_status_change.py
tests/core/: conftest.py  test_scheduled_tasks.py  test_utils.py
tests/db/: test_models.py
tests/db/models/: test_methods.py  test_retailer.py  test_reward.py  test_transaction.py  test_transaction_earn.py
tests/public/api/: __init__.py  conftest.py  test_endpoints.py
tests/public_api/api/: __init__.py  conftest.py  test_endpoints.py
tests/rewards/: conftest.py  test_activity_type.py  test_reward_import_and_updates.py
tests/rewards/functional/: test_fetch_reward_pre_loaded.py  test_reward_import_and_updates.py  test_scheduled_tasks.py  test_tasks.py
tests/rewards/functional/fetch_reward_jigsaw/: __init__.py  conftest.py  test_get_token_paths.py  test_register_paths.py  test_reversal_paths.py  test_success_paths.py
tests/transactions/: test_activity_type.py
tests/transactions/api/: __init__.py  conftest.py  test_transaction.py
tests/transactions/functional/: test_refund_logic.py
tests/transactions/functional/fixtures/: refund_logic.py
